; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_dp_backing_file.c_macx_triggers.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_dp_backing_file.c_macx_triggers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macx_triggers_args = type { i32 }

@SWAP_COMPACT_DISABLE = common dso_local global i32 0, align 4
@SWAP_COMPACT_ENABLE = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @macx_triggers(%struct.macx_triggers_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.macx_triggers_args*, align 8
  %4 = alloca i32, align 4
  store %struct.macx_triggers_args* %0, %struct.macx_triggers_args** %3, align 8
  %5 = load %struct.macx_triggers_args*, %struct.macx_triggers_args** %3, align 8
  %6 = getelementptr inbounds %struct.macx_triggers_args, %struct.macx_triggers_args* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @SWAP_COMPACT_DISABLE, align 4
  %10 = load i32, i32* @SWAP_COMPACT_ENABLE, align 4
  %11 = or i32 %9, %10
  %12 = and i32 %8, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @macx_backing_store_compaction(i32 %15)
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @ENOTSUP, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %14
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @macx_backing_store_compaction(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
